--- a/MoppApp/MoppApp/MyEid.storyboard
+++ b/MoppApp/MoppApp/MyEid.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qFP-og-5IC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qFP-og-5IC">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -108,7 +108,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyeIDInfoCell" rowHeight="69" id="sUs-Hf-JPf" customClass="MyeIDInfoCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="69"/>
+                                        <rect key="frame" x="0.0" y="24.5" width="375" height="69"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sUs-Hf-JPf" id="648-ae-GIY">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
@@ -144,7 +144,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="marginCell" rowHeight="15" id="A6s-au-iZz">
-                                        <rect key="frame" x="0.0" y="97" width="375" height="15"/>
+                                        <rect key="frame" x="0.0" y="93.5" width="375" height="15"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="A6s-au-iZz" id="E0S-re-LFz">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="15"/>
@@ -168,7 +168,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyeIDSegmentHeaderCell" rowHeight="55" id="A8A-0d-Gn2" customClass="MyeIDSegmentHeaderCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="112" width="375" height="55"/>
+                                        <rect key="frame" x="0.0" y="108.5" width="375" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="A8A-0d-Gn2" id="V7o-I5-DV0">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
@@ -205,24 +205,43 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyeIDPinPukCell" rowHeight="264" id="4lc-dq-tbf" customClass="MyeIDPinPukCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="167" width="375" height="264"/>
+                                        <rect key="frame" x="0.0" y="163.5" width="375" height="264"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4lc-dq-tbf" id="TpW-2W-W0x">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="264"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PIN - Isikutuvastamise sertifikaat" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJu-2L-EAd">
-                                                    <rect key="frame" x="16" y="19" width="343" height="23.5"/>
-                                                    <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
-                                                    <color key="textColor" name="MoppTitle"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Sertifikaat kehtib kuni 10. august 2019" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qQ-fi-sih">
-                                                    <rect key="frame" x="16" y="46.5" width="343" height="20"/>
-                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
-                                                    <color key="textColor" name="MoppLabelDarker"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0xZ-T4-fMD">
+                                                    <rect key="frame" x="16" y="12.5" width="343" height="63.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PIN - Isikutuvastamise sertifikaat" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJu-2L-EAd">
+                                                            <rect key="frame" x="0.0" y="8" width="343" height="24"/>
+                                                            <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
+                                                            <color key="textColor" name="MoppTitle"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Sertifikaat kehtib kuni 10. august 2019" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qQ-fi-sih">
+                                                            <rect key="frame" x="0.0" y="34.5" width="343" height="20"/>
+                                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                                            <color key="textColor" name="MoppLabelDarker"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <accessibility key="accessibilityConfiguration">
+                                                        <accessibilityTraits key="traits" staticText="YES"/>
+                                                        <bool key="isElement" value="YES"/>
+                                                    </accessibility>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="7qQ-fi-sih" secondAttribute="trailing" id="2N7-Zv-wJT"/>
+                                                        <constraint firstItem="NJu-2L-EAd" firstAttribute="leading" secondItem="0xZ-T4-fMD" secondAttribute="leadingMargin" constant="-8" id="BjP-4M-auw"/>
+                                                        <constraint firstItem="NJu-2L-EAd" firstAttribute="top" secondItem="0xZ-T4-fMD" secondAttribute="topMargin" id="EQt-Jj-Hdj"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="NJu-2L-EAd" secondAttribute="trailing" constant="-8" id="J7K-Qa-050"/>
+                                                        <constraint firstItem="7qQ-fi-sih" firstAttribute="top" secondItem="NJu-2L-EAd" secondAttribute="bottom" constant="2.5" id="K3S-Ed-gYJ"/>
+                                                        <constraint firstAttribute="bottom" secondItem="7qQ-fi-sih" secondAttribute="bottom" constant="9" id="cPc-Pk-qw8"/>
+                                                        <constraint firstItem="7qQ-fi-sih" firstAttribute="leading" secondItem="0xZ-T4-fMD" secondAttribute="leading" id="miu-oe-Bbr"/>
+                                                    </constraints>
+                                                </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ea3-dl-Wz3">
                                                     <rect key="frame" x="16" y="98.5" width="343" height="50"/>
                                                     <color key="backgroundColor" name="MoppBase"/>
@@ -288,25 +307,23 @@
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="9vn-PN-mob" secondAttribute="bottom" priority="750" constant="16" id="1nY-OQ-IsU"/>
                                                 <constraint firstItem="bRI-cY-Mwr" firstAttribute="centerY" secondItem="9vn-PN-mob" secondAttribute="centerY" id="3lK-hb-zGy"/>
+                                                <constraint firstItem="0xZ-T4-fMD" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="6CZ-Aj-vuW"/>
+                                                <constraint firstItem="Ea3-dl-Wz3" firstAttribute="top" secondItem="0xZ-T4-fMD" secondAttribute="bottom" constant="22.5" id="Bzj-E8-DF4"/>
                                                 <constraint firstItem="DKW-MG-75P" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leading" constant="15" id="EyQ-Ke-VQf"/>
+                                                <constraint firstItem="0xZ-T4-fMD" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="IVq-6f-ljc"/>
                                                 <constraint firstItem="bRI-cY-Mwr" firstAttribute="width" secondItem="9vn-PN-mob" secondAttribute="width" id="K0n-kB-gxy"/>
                                                 <constraint firstItem="ST5-E7-4MQ" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="Kz5-iF-C7V"/>
                                                 <constraint firstAttribute="bottom" secondItem="9vn-PN-mob" secondAttribute="bottom" priority="250" constant="-30" id="LBl-BV-nAT"/>
                                                 <constraint firstItem="ST5-E7-4MQ" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="MDC-q0-JWB"/>
-                                                <constraint firstItem="Ea3-dl-Wz3" firstAttribute="top" secondItem="7qQ-fi-sih" secondAttribute="bottom" constant="32" id="NfE-GS-nbR"/>
+                                                <constraint firstItem="0xZ-T4-fMD" firstAttribute="top" secondItem="TpW-2W-W0x" secondAttribute="topMargin" constant="1.5" id="MoN-n1-7Ci"/>
+                                                <constraint firstItem="Ea3-dl-Wz3" firstAttribute="top" secondItem="0xZ-T4-fMD" secondAttribute="bottom" constant="22.5" id="NfE-GS-nbR"/>
                                                 <constraint firstItem="Ea3-dl-Wz3" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="RZb-tO-KNq"/>
-                                                <constraint firstItem="7qQ-fi-sih" firstAttribute="top" secondItem="NJu-2L-EAd" secondAttribute="bottom" constant="4" id="TtV-cf-bWZ"/>
                                                 <constraint firstItem="9vn-PN-mob" firstAttribute="centerX" secondItem="TpW-2W-W0x" secondAttribute="centerX" id="UfU-61-X6F"/>
                                                 <constraint firstItem="bRI-cY-Mwr" firstAttribute="leading" secondItem="9vn-PN-mob" secondAttribute="leading" id="bvZ-vF-LVN"/>
-                                                <constraint firstItem="NJu-2L-EAd" firstAttribute="top" secondItem="TpW-2W-W0x" secondAttribute="topMargin" constant="8" id="cjN-Dp-SbP"/>
-                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="top" secondItem="7qQ-fi-sih" secondAttribute="bottom" priority="250" constant="8" id="cym-Fg-aF2"/>
-                                                <constraint firstItem="7qQ-fi-sih" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="iaa-V5-P17"/>
-                                                <constraint firstItem="NJu-2L-EAd" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="irx-e2-V7e"/>
+                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="top" secondItem="0xZ-T4-fMD" secondAttribute="bottom" priority="250" constant="88.5" id="cym-Fg-aF2"/>
                                                 <constraint firstAttribute="trailing" secondItem="bRI-cY-Mwr" secondAttribute="trailing" constant="11" id="kQy-gy-41f"/>
-                                                <constraint firstItem="7qQ-fi-sih" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="lN7-oh-cvY"/>
-                                                <constraint firstItem="NJu-2L-EAd" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="lid-df-Dra"/>
                                                 <constraint firstItem="9vn-PN-mob" firstAttribute="top" secondItem="ST5-E7-4MQ" secondAttribute="bottom" constant="16" id="n8P-1N-NBL"/>
-                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="top" secondItem="7qQ-fi-sih" secondAttribute="bottom" priority="750" constant="98" id="qYc-7e-1D3"/>
+                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="top" secondItem="0xZ-T4-fMD" secondAttribute="bottom" priority="750" constant="88.5" id="qYc-7e-1D3"/>
                                                 <constraint firstAttribute="trailing" secondItem="DKW-MG-75P" secondAttribute="trailing" constant="15" id="ttS-R0-TMT"/>
                                                 <constraint firstItem="Ea3-dl-Wz3" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="uaD-3w-sLv"/>
                                                 <constraint firstAttribute="bottom" secondItem="DKW-MG-75P" secondAttribute="bottom" id="zm9-mN-kSo"/>
@@ -322,6 +339,7 @@
                                             <outlet property="bottomLine" destination="DKW-MG-75P" id="qzk-1I-cCF"/>
                                             <outlet property="button" destination="Ea3-dl-Wz3" id="1ql-or-fx5"/>
                                             <outlet property="certInfoLabel" destination="7qQ-fi-sih" id="a0h-vL-rds"/>
+                                            <outlet property="certInfoView" destination="0xZ-T4-fMD" id="tOE-Xz-ZLQ"/>
                                             <outlet property="errorLabel" destination="ST5-E7-4MQ" id="N46-Oj-SDy"/>
                                             <outlet property="hideCertsExpiredCSTR" destination="1nY-OQ-IsU" id="hKq-bS-tan"/>
                                             <outlet property="hideChangeButtonCSTR" destination="cym-Fg-aF2" id="vTl-WD-spV"/>
