--- a/MoppApp/MoppApp/Container.storyboard
+++ b/MoppApp/MoppApp/Container.storyboard
@@ -250,6 +250,10 @@
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Allkiri on kehtiv" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yfh-N8-Cag" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                     <rect key="frame" x="46" y="37.5" width="562" height="19"/>
+                                                    <accessibility key="accessibilityConfiguration">
+                                                        <accessibilityTraits key="traits" button="YES" staticText="YES"/>
+                                                    </accessibility>
+                                                    <gestureRecognizers/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -306,7 +310,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Missing signatures" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQF-XJ-qkZ" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Missing signatures" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQF-XJ-qkZ" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                     <rect key="frame" x="40" y="20" width="587" height="20"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -434,8 +438,53 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SignatureWarningsCell" id="EuL-kY-1xk" customClass="SignatureWarningsCell" customModule="MoppApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.5" width="320" height="113"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="EuL-kY-1xk" id="jcz-9E-Odf">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Njw-sr-4Er">
+                                                    <rect key="frame" x="16" y="11" width="288" height="91"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrU-4d-kMC" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="288" height="21.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9yx-IE-4dh" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="37" width="288" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KZ3-Yc-Cn6" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="71.5" width="288" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <gestureRecognizers/>
+                                            <constraints>
+                                                <constraint firstItem="Njw-sr-4Er" firstAttribute="trailing" secondItem="jcz-9E-Odf" secondAttribute="trailingMargin" id="0eo-ih-aGd"/>
+                                                <constraint firstItem="Njw-sr-4Er" firstAttribute="top" secondItem="jcz-9E-Odf" secondAttribute="topMargin" id="2gq-v3-txQ"/>
+                                                <constraint firstItem="Njw-sr-4Er" firstAttribute="leading" secondItem="jcz-9E-Odf" secondAttribute="leadingMargin" id="Avq-Yt-bNc"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Njw-sr-4Er" secondAttribute="bottom" id="Qc1-0w-I6V"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="warningsDescription" destination="9yx-IE-4dh" id="R49-sR-hLK"/>
+                                            <outlet property="warningsDetails" destination="KZ3-Yc-Cn6" id="xgv-aj-EAQ"/>
+                                            <outlet property="warningsHeader" destination="XrU-4d-kMC" id="LZr-qp-F96"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SignatureDetailsCell" id="2zs-PN-2mh" customClass="SignatureDetailsCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="55.5" width="320" height="22.5"/>
+                                        <rect key="frame" x="0.0" y="168.5" width="320" height="22.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2zs-PN-2mh" id="rwt-HO-RNZ">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="22.5"/>
@@ -483,10 +532,10 @@
                         <viewLayoutGuide key="safeArea" id="g5c-G2-qft"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="K2X-qE-QuN" firstAttribute="leading" secondItem="g5c-G2-qft" secondAttribute="leading" id="T9D-eR-0AG"/>
-                            <constraint firstItem="K2X-qE-QuN" firstAttribute="top" secondItem="noA-ex-SBD" secondAttribute="top" id="kui-PP-e09"/>
-                            <constraint firstAttribute="bottom" secondItem="K2X-qE-QuN" secondAttribute="bottom" id="ufE-2R-bgd"/>
-                            <constraint firstItem="K2X-qE-QuN" firstAttribute="trailing" secondItem="g5c-G2-qft" secondAttribute="trailing" id="yzh-JJ-eSV"/>
+                            <constraint firstItem="K2X-qE-QuN" firstAttribute="trailing" secondItem="g5c-G2-qft" secondAttribute="trailing" id="ZwZ-rV-irF"/>
+                            <constraint firstItem="K2X-qE-QuN" firstAttribute="top" secondItem="g5c-G2-qft" secondAttribute="top" id="ebC-X3-bzo"/>
+                            <constraint firstItem="K2X-qE-QuN" firstAttribute="bottom" secondItem="g5c-G2-qft" secondAttribute="bottom" id="hFy-5G-5xG"/>
+                            <constraint firstItem="K2X-qE-QuN" firstAttribute="leading" secondItem="g5c-G2-qft" secondAttribute="leading" id="ues-sT-mCh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title=" " id="VRo-ta-ydq">
